--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Handy Stalker</string>
+    <string name="policies_privacy">http://www.google.com/policies/privacy</string>
+
+
 </resources>
