feat: let user set the place name
After getting the place location, create dialog and let user specify the name of this location.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="e_mail">E-mail</string>
     <string name="notification_rules">Notification Rules</string>
     <string name="add_new_contact">Add new contact</string>
+
+
+    <string name="save">Save this place</string>
+    <string name="cancel">Cancel</string>
+    <string name="enter_name">Enter name of your place</string>
 </resources>
