--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,7 @@
     <string name="data_on_turn">Turn mobile data ON.</string>
     <string name="data_off_turn">Turn mobile data OFF.</string>
 
+    <!--Ads-->
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
 </resources>
