--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">Handy Stalker</string>
     <string name="policies_privacy">http://www.google.com/policies/privacy</string>
     <string name="add_new_location">Add new location</string>
 
     <string name="setting_enabled" translatable="false">EnabledSetting</string>
-
-    <string name="privacy" tools:keep="@string/privacy">http://www.google.com/policies/privacy</string>
 
     <!--MainActivity Buttons -->
     <string name="my_places">My Places</string>
@@ -14,10 +12,8 @@
 
     <!--Rules Buttons -->
     <string name="send_sms">Send SMS</string>
-
     <string name="send_rules">Stalking Rules</string>
     <string name="settings_rules">Handy Rules</string>
-
 
     <!--Dialog -->
     <string name="save">Save this place</string>
@@ -27,13 +23,16 @@
 
     <!--Permissions -->
     <string name="sms_permission">SMS Permission</string>
-
+    <string name="sound_permission">Sound Permission</string>
+    <string name="location_permission">Location Permission</string>
+    <string name="enable_stalking">Enable Stalking</string>
     <string name="need_location_permission_message">You need to enable location permissions first</string>
 
     <!--Contacts-->
     <string name="phone_number_cc">phone number (with country code)</string>
     <string name="name">name</string>
-
+    <string name="phone">phone</string>
+    <string name="email">email@</string>
     <string name="add_new_contact">Add new contact</string>
     <string name="save_my_stalker">Save my stalker</string>
     <string name="browse_my_contacts">Browse my contacts</string>
@@ -50,20 +49,14 @@
     </string-array>
 
     <string name="add_new_rule">Add new rule</string>
-    <string name="reached">You recently reached</string>
     <string name="new_rule">New Rule</string>
-    <string name="sound_permission">Sound Permission</string>
-    <string name="wifi_on_turn">Turn Wi-Fi ON.</string>
-    <string name="wifi_of_turn">Turn Wi-Fi OFF.</string>
-    <string name="sound_on_turn">Turn sound ON.</string>
-    <string name="sound_off_turn">Turn sound OFF.</string>
-    <string name="data_on_turn">Turn mobile data ON.</string>
-    <string name="data_off_turn">Turn mobile data OFF.</string>
 
     <!--Ads-->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
+
+    <!--Layout description-->
     <string name="app_image">Eye with location in the middle</string>
-    <string name="go_to_app">Go to app!</string>
     <string name="sms_icon">SMS icon</string>
     <string name="location_icon">Location icon</string>
     <string name="geofencing_icon">Geofencing icon</string>
@@ -72,9 +65,11 @@
     <string name="edit_icon">Edit icon</string>
     <string name="volume_icon">Volume icon</string>
     <string name="wifi_icon">Wifi icon</string>
-    <string name="location_permission">Location Permission</string>
-    <string name="enable_stalking">Enable Stalking</string>
     <string name="place_icon">Place icon</string>
+    <string name="contact_icon">Contact icon</string>
+    <string name="rule_icon">Rule icon</string>
+
+    <!--Stalking Rules-->
     <string name="send_sms_to">Send SMS to</string>
     <string name="after_reaching">after reaching</string>
     <string name="from">from</string>
@@ -84,23 +79,40 @@
     <string name="notify_me_to_let">Notify me to let</string>
     <string name="know_about_my_safe">know about my safe</string>
     <string name="save_notification_rule">Save Notification Rule</string>
-    <string name="rule_icon">Rule icon</string>
     <string name="arrival">Arrival</string>
     <string name="depart_from">Depart from</string>
-    <string name="call">Call</string>
-    <string name="whatsapp">WhatsApp</string>
-    <string name="contact_icon">Contact icon</string>
-    <string name="phone">phone</string>
-    <string name="email">email@</string>
+
+    <!--Handy Rules-->
     <string name="turn_wi_fi">Turn Wi-Fi</string>
     <string name="while_in">while in</string>
     <string name="save_wi_fi_rule">Save Wi-fi Rule</string>
     <string name="turn_sound">Turn sound</string>
     <string name="save_sound_rule">Save Sound Rule</string>
     <string name="wifi_permission">WiFi Permission</string>
+
+    <string name="wifi_on_turn">Turn Wi-Fi ON.</string>
+    <string name="wifi_of_turn">Turn Wi-Fi OFF.</string>
+    <string name="sound_on_turn">Turn sound ON.</string>
+    <string name="sound_off_turn">Turn sound OFF.</string>
+    <string name="data_on_turn">Turn mobile data ON.</string>
+    <string name="data_off_turn">Turn mobile data OFF.</string>
+
+    <!--Widget-->
+    <string name="call">Call</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="go_to_app">Set new rules!</string>
+    <string name="reached">You recently reached</string>
+
+    <!--List Item Description-->
     <string name="my_stalker">My Stalker:</string>
     <string name="arrival_to">Arrival:</string>
     <string name="departure_to">Departure:</string>
     <string name="place">Place:</string>
+
+    <string name="stalker_update_toast">Stalker updated successfully</string>
+    <string name="new_stalker_toast">New stalker saved successfully</string>
+
+    <!--Dialog-->
+    <string name="set_place_name">Set name of your place</string>
 
 </resources>
