refactor: delete unused resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,5 +114,6 @@
 
     <!--Dialog-->
     <string name="set_place_name">Set name of your place</string>
+    <string name="text_message">Hi, I arrived safely!</string>
 
 </resources>
