feat: rules layout feat: rules layout

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -130,4 +130,8 @@
     <string name="my_text_messages">Zprávy</string>
     <string name="save_text">Uložit zprávu</string>
 
+    <!--Rule Buttons-->
+    <string name="notification">Notifikace</string>
+    <string name="text_message_button">SMS zprávy</string>
+
 </resources>
