--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,7 @@
     <string name="add_a_text_message">Add a Text Message</string>
     <string name="my_text_messages">My Text Messages</string>
     <string name="save_text">Save Text</string>
+    <string name="notification">Notification</string>
+    <string name="text_message_button">Text Message</string>
 
 </resources>
