feat: text message - rules layout change

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -133,5 +133,6 @@
     <!--Rule Buttons-->
     <string name="notification">Notifikace</string>
     <string name="text_message_button">SMS zprávy</string>
+    <string name="my_texts">Zprávy</string>
 
 </resources>
