--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,5 +136,6 @@
     <string name="notification">Notification</string>
     <string name="text_message_button">Text Message</string>
     <string name="my_texts">My Texts</string>
+    <string name="message_icon">Message Icon</string>
 
 </resources>
