feat: message rule for arrival saves

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -138,5 +138,6 @@
     <string name="text_message_button">SMS zprávy</string>
     <string name="my_texts">Zprávy</string>
     <string name="message_icon">Message Icon</string>
+    <string name="sms_rules">SMS pravidla:</string>
 
 </resources>
