--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,5 +140,6 @@
     <string name="text_message_button">Text Message</string>
     <string name="my_texts">My Texts</string>
     <string name="message_icon">Message Icon</string>
+    <string name="sms_rules">Text rules:</string>
 
 </resources>
