--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -144,5 +144,11 @@
     <string name="sms_rules">SMS pravidla:</string>
     <string name="add_text_rule_title">Přidejte pravidlo pro odeslání SMS</string>
     <string name="add_notification_rule">Přidejte pravidlo pro notifikace</string>
+    <string name="notify_me_after_arrival">Notifikuj mne po příchodu na místo</string>
+    <string name="if_I_departured_from">pokud jsem před tím byl na místě</string>
+    <string name="notify_me_after_departuring_from">Notifikuj mne po odchodu z místa</string>
+    <string name="after_my_arrival_to">after my arrival to</string>
+    <string name="add_sound_rule">Add sound rule</string>
+    <string name="after_departuring_from">after departuring from</string>
 
 </resources>
