feat: connecting handy rules layout with database

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -147,8 +147,8 @@
     <string name="notify_me_after_arrival">Notifikuj mne po příchodu na místo</string>
     <string name="if_I_departured_from">pokud jsem před tím byl na místě</string>
     <string name="notify_me_after_departuring_from">Notifikuj mne po odchodu z místa</string>
-    <string name="after_my_arrival_to">after my arrival to</string>
-    <string name="add_sound_rule">Add sound rule</string>
-    <string name="after_departuring_from">after departuring from</string>
+    <string name="after_my_arrival_to">poté, co dorazím do </string>
+    <string name="add_sound_rule">Přidat pravidlo pro zvuk</string>
+    <string name="after_departuring_from">po mém odchodu z</string>
 
 </resources>
