--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,4 +172,6 @@
     <string name="select_from_nearby_places">Select from nearby places</string>
     <string name="channel_name">My stalkers are curious</string>
     <string name="channel_description">Channel for notifications about arrivals and departures.</string>
+    <string name="location_off">Location is off.</string>
+    <string name="only_100">Only 100 places allowed</string>
 </resources>
